--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -4,3 +4,10 @@ ja:
       payment_method:
         credit_card: "クレジットカード"
         transfer: "銀行振込"
+
+      status:
+        waiting_payment: "入金待ち"
+        deposited: "入金確認"
+        production: "製作中"
+        preparing: "発送準備中"
+        shipped: "発送済み"
